<resources>
    <string name="app_name">User Profile</string>
    <string name="title_activity_login">LoginActivity</string>
    <!-- Strings used for fragments for navigation -->

    <string name="title_activity_sign_up">SignUpActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="welcome_to_our_app">Welcome to our app!</string>
    <string name="directing_user">This is the first version of user profile app. Please sign in or create an account below.</string>
    <string name="log_in">Log in</string>
    <string name="create_an_account">Create an account</string>
    <string name="log_in_to_your_account">Log in to your account</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="please_enter_your_email">Please enter your email</string>
    <string name="please_enter_your_password">Please enter your password</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="register_new_account">Register new account</string>
    <string name="full_name">Full Name</string>
    <string name="please_enter_your_full_name">Please enter your full name</string>
    <string name="re_type_password">Re-type Password</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="register">Register</string>
    <string name="reset_your_password">Reset your password</string>
    <string name="reset_password">Reset Password</string>
    <string name="enter_your_email_address">Enter your email address</string>
    <string name="confirmation_code">Confirmation Code</string>
    <string name="verificaton">Verificaton</string>
    <string name="insert_your_code_here">Insert your code here:</string>
    <string name="Continue">Continue</string>
    <string name="resent_code">Resent code</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="new_password">New Password</string>
    <string name="my_profile">MY PROFILE</string>
    <string name="ahmed_essam">Ahmed Essam</string>
    <string name="edit">Edit</string>
    <string name="ahmed_gmail_com">ahmed@gmail.com</string>
    <string name="location">Location</string>
    <string name="cairo_egypt">Cairo, Egypt</string>
    <string name="remove_account">Remove Account</string>
    <string name="edit_full_name">Edit Full Name</string>
    <string name="edit_email">Edit Email Address</string>
    <string name="edit_gender">Edit Gender</string>
    <string name="edit_address">Edit Address</string>
    <string name="Country">Country</string>
    <string name="City">City</string>
    <string name="old_password">Old Password</string>
    <string name="re_type_new_password">Re-type New Password</string>
    <string name="edit_password">Edit Password</string>
    <string name="edit_picture">Edit Picture</string>


    <string-array name="Countries">
        <item>Egypt</item>
    </string-array>


    <string-array name="Cities">
        <item>Cairo</item>
    </string-array>


</resources>
