<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".LoginFragment">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/green_curved_bg"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="30dp">

        <ImageView
            android:id="@+id/back_btn"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_back"
            android:layout_marginBottom="20dp"/>
        <TextView

            android:text="@string/log_in_to_your_account"

          style="@style/titleTextViewStyle"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/white_curved_bg"
        android:padding="30dp">

        <TextView

            android:text="@string/email"
           style="@style/textViewStyle"
            />

        <EditText

            android:inputType="textEmailAddress"
            style="@style/editTextStyle"
            android:hint="@string/please_enter_your_email" />

        <TextView
           style="@style/textViewStyle"
            android:text="@string/password"
            android:layout_marginTop="25dp"


            />

        <EditText

            android:hint="@string/please_enter_your_password"
            android:inputType="textPassword"
           style="@style/editTextStyle"/>

        <TextView
            android:id="@+id/forgot_password_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"
            android:layout_marginBottom="30dp"
            android:layout_marginTop="20dp"
            android:textColor="#56a4d7"
            android:gravity="end"
            android:textStyle="bold"
            android:textSize="16sp"
            />

        <Button
            android:id="@+id/login_btn"
            android:background="@drawable/rounded_blue_btn"
            android:text="@string/login"
            style="@style/buttonStyle"
            android:textColor="#FFFFFF" />


    </LinearLayout>
</LinearLayout>
</ScrollView>