<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fillViewport="true"
    tools:context=".ui.authentication.RegisterFragment">

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/green_bg"
        android:orientation="vertical">

        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="top|end"
            android:alpha="0.4"
            android:layout_marginEnd="-10dp"
            android:layout_marginBottom="-200dp"
            android:rotation="-20"
            android:src="@drawable/capture" />


        <Space
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:orientation="vertical">


        </Space>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/white_curved_bg"
            android:orientation="vertical"
            android:padding="30dp">

            <TextView

                style="@style/textViewStyle"
                android:text="@string/full_name" />

            <EditText
                android:id="@+id/register_full_name_et"
                style="@style/editTextStyle"
                android:hint="@string/please_enter_your_full_name"
                android:inputType="textPersonName" />

            <TextView
                style="@style/textViewStyle"

                android:layout_marginTop="25dp"
                android:text="Email" />

            <EditText
                android:id="@+id/register_email_et"
                style="@style/editTextStyle"
                android:hint="@string/please_enter_your_email"
                android:inputType="textEmailAddress" />


            <TextView

                style="@style/textViewStyle"
                android:layout_marginTop="25dp"
                android:text="@string/password"


                />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:endIconMode="password_toggle"
                app:hintEnabled="false">


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/register_password_et"
                    style="@style/editTextStyle"
                    android:hint="@string/please_enter_your_password"
                    android:inputType="textPassword"

                    />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView

                style="@style/textViewStyle"
                android:layout_marginTop="25dp"
                android:text="@string/re_type_password"

                />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:endIconMode="password_toggle"
                app:hintEnabled="false">


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/register_re_password_et"
                    style="@style/editTextStyle"
                    android:hint="@string/please_enter_your_password"
                    android:inputType="textPassword"

                    />

            </com.google.android.material.textfield.TextInputLayout>


            <TextView

                style="@style/textViewStyle"
                android:layout_marginTop="25dp"
                android:text="@string/gender"

                />

            <RadioGroup
                android:layout_marginBottom="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/gender_radio_group"
                android:weightSum="2"
                android:orientation="horizontal"
                android:id="@+id/radioGroup">

                <RadioButton
                    android:id="@+id/gender_male_btn"
                    android:layout_width="0dp"
                    android:button="@null"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/male_button_selector"
                    android:text="@string/male"
                    android:padding="10dp"
                    android:textAlignment="center"
                    android:textColor="#FFFFFF" />

                <RadioButton
                    android:button="@null"
                    android:id="@+id/gender_female_btn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:padding="10dp"
                    android:textAlignment="center"
                    android:layout_weight="1"
                    android:background="@drawable/female_button_selector"
                    android:text="@string/female"
                    android:textColor="#FFFFFF" />
            </RadioGroup>

            <Button
                android:id="@+id/signup_btn"
                style="@style/buttonStyle"
                android:layout_gravity="bottom"
                android:background="@drawable/rounded_blue_btn"
                android:text="@string/register"
                android:textAllCaps="false"
                android:textColor="#FFFFFF" />


        </LinearLayout>
    </LinearLayout>
</ScrollView>