<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <Button
        android:layout_width="60dp"
        android:layout_height="8dp"
        android:layout_gravity="center"
        android:layout_marginBottom="15dp"
        android:background="@drawable/rounded_white_btn" />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true"
        android:background="@drawable/white_curved_bg">

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="30dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="50dp"
            android:text="@string/edit_full_name"
            android:textColor="#000000"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            style="@style/textViewStyle"
            android:text="@string/full_name" />

        <EditText
            android:id="@+id/edit_full_name_et"
            style="@style/editTextStyle"
            android:layout_marginBottom="50dp"
            android:hint="@string/please_enter_your_full_name"
            android:inputType="textPersonName" />


        <Button
            android:id="@+id/edit_full_name_btn"
            style="@style/buttonStyle"
            android:background="@drawable/rounded_blue_btn"
            android:text="@string/edit"
            android:textColor="#FFFFFF" />


    </LinearLayout>

</ScrollView>

</LinearLayout>