<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <Button
        android:layout_width="60dp"
        android:layout_height="8dp"
        android:layout_gravity="center"
        android:layout_marginBottom="15dp"
        android:background="@drawable/rounded_white_btn" />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true"
        android:background="@drawable/white_curved_bg">

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="30dp">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="50dp"
            android:text="@string/edit_gender"
            android:textColor="#000000"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            style="@style/textViewStyle"
            android:text="@string/gender" />


            <RadioGroup
                android:layout_marginBottom="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/gender_radio_group"
                android:weightSum="2"
                android:orientation="horizontal"
                android:id="@+id/radioGroup">

                <RadioButton
                    android:id="@+id/gender_male_btn"
                    android:layout_width="0dp"
                    android:button="@null"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/male_button_selector"
                    android:text="@string/male"
                    android:padding="10dp"
                    android:textAlignment="center"
                    android:textColor="#FFFFFF" />

                <RadioButton
                    android:button="@null"
                    android:id="@+id/gender_female_btn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:padding="10dp"
                    android:textAlignment="center"
                    android:layout_weight="1"
                    android:background="@drawable/female_button_selector"
                    android:text="@string/female"
                    android:textColor="#FFFFFF" />
            </RadioGroup>


            <Button
            android:id="@+id/edit_gender_btn"
            style="@style/buttonStyle"
            android:background="@drawable/rounded_blue_btn"
            android:text="@string/edit"
            android:textColor="#FFFFFF" />


    </LinearLayout>

</ScrollView>

</LinearLayout>