<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/white_curved_bg"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:orientation="vertical"
        android:padding="30dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="50dp"
            android:text="@string/remove_account"
            android:textColor="#000000"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView

            style="@style/textViewStyle"
            android:text="@string/password" />

        <EditText
            android:id="@+id/remove_account_password_et"
            style="@style/editTextStyle"
            android:layout_marginBottom="20dp"
            android:hint="@string/please_enter_your_password"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/remove_account_btn"
            style="@style/buttonStyle"
            android:layout_marginTop="40dp"
            android:background="@drawable/rounded_red_btn"
            android:text="@string/remove_account"
            android:textColor="#FFFFFF" />


    </LinearLayout>

</ScrollView>