<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".ResetPasswordFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/green_curved_bg"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="30dp">

            <ImageView
                android:id="@+id/back_btn"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_back"
                android:layout_marginBottom="20dp"/>
            <TextView

                android:text="@string/reset_your_password"
                style="@style/titleTextViewStyle"
                />

        </LinearLayout>




        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@drawable/white_curved_bg"
            android:padding="30dp">

            <ImageView
                android:layout_margin="30dp"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:src="@drawable/ic_intro_image"
                android:layout_gravity="center"/>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/reset_password"
                android:layout_marginBottom="10dp"
                android:textColor="#221F68"
                android:textSize="25sp"
                android:textStyle="bold"
                android:gravity="center"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/enter_your_email_address"
                android:layout_marginBottom="10dp"
                android:textColor="#000000"
                android:textSize="15sp"
                android:gravity="center"
                />

            <TextView

                android:text="@string/email"
                style="@style/textViewStyle"
                />

            <EditText

                android:inputType="textEmailAddress"
                android:layout_marginBottom="30dp"
                style="@style/editTextStyle"
                android:hint="@string/please_enter_your_email" />



            <Button
                android:id="@+id/reset_password_btn"
                android:background="@drawable/rounded_blue_btn"
                android:text="@string/reset_password"
                style="@style/buttonStyle"
                android:textColor="#FFFFFF" />


        </LinearLayout>

    </LinearLayout>
</ScrollView>