<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <Button
        android:layout_width="60dp"
        android:layout_height="8dp"
        android:layout_gravity="center"
        android:layout_marginBottom="15dp"
        android:background="@drawable/rounded_white_btn" />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true"
        android:background="@drawable/white_curved_bg">

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="30dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="50dp"
                android:text="@string/edit_password"
                android:textColor="#000000"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView

                style="@style/textViewStyle"
                android:text="@string/old_password" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:endIconMode="password_toggle"
                app:hintEnabled="false">


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/old_password_et"
                    style="@style/editTextStyle"
                    android:hint="@string/please_enter_your_password"
                    android:inputType="textPassword"
                    android:layout_marginBottom="20dp" />

            </com.google.android.material.textfield.TextInputLayout>


            <TextView

                style="@style/textViewStyle"
                android:text="@string/new_password" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:endIconMode="password_toggle"
                app:hintEnabled="false">


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/new_password_et"
                    style="@style/editTextStyle"
                    android:hint="@string/please_enter_your_password"
                    android:inputType="textPassword"

                    />

            </com.google.android.material.textfield.TextInputLayout>


            <TextView

                style="@style/textViewStyle"

                android:layout_marginTop="25dp"
                android:text="@string/re_type_new_password"

                />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:endIconMode="password_toggle"
                app:hintEnabled="false">


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/re_type_new_password_et"
                    style="@style/editTextStyle"
                    android:hint="@string/please_enter_your_password"
                    android:inputType="textPassword"
                    android:layout_marginBottom="30dp"

                    />

            </com.google.android.material.textfield.TextInputLayout>


            <Button
                android:id="@+id/edit_password_btn"
                style="@style/buttonStyle"
                android:background="@drawable/rounded_blue_btn"
                android:text="@string/edit"
                android:textColor="#FFFFFF" />


        </LinearLayout>

    </ScrollView>

</LinearLayout>