<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/green_curved_bg"
        android:orientation="vertical"
        tools:context=".ui.authentication.ChangePasswordFragment">

        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="top|end"
            android:alpha="0.4"
            android:layout_marginEnd="-10dp"
            android:layout_marginBottom="-200dp"
            android:rotation="-20"
            android:src="@drawable/capture" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="30dp">

            <ImageView
                android:id="@+id/back_btn"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginBottom="20dp"
                android:src="@drawable/ic_back" />

            <TextView

                style="@style/titleTextViewStyle"
                android:text="@string/change_password" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/white_curved_bg"
            android:orientation="vertical"
            android:padding="30dp">

            <TextView

                style="@style/textViewStyle"
                android:text="@string/new_password" />

            <EditText
                style="@style/editTextStyle"
                android:hint="@string/please_enter_your_password"
                android:inputType="textPassword" />

            <TextView

                style="@style/textViewStyle"

                android:layout_marginTop="25dp"
                android:text="@string/re_type_password"

                />

            <EditText
                style="@style/editTextStyle"
                android:layout_marginBottom="30dp"
                android:hint="@string/please_enter_your_password"
                android:inputType="textPassword" />


            <Button
                android:id="@+id/change_password_btn"
                style="@style/buttonStyle"
                android:background="@drawable/rounded_blue_btn"
                android:text="@string/change_password"
                android:textColor="#FFFFFF" />


        </LinearLayout>
    </LinearLayout>
</ScrollView>